tests/ui/g-loop-route-reversed-arms.stderr
error[E0080]: evaluation panicked: loop routes must order arms as continue then break
 --> src/global/program/source.rs
  |
  | /             is_binary_loop_route(
  | |                 left_head.loop_meaning,
  | |                 right_head.loop_meaning,
  | |             ),
  | |_____________^ evaluation of `hibana::global::program::source::<impl hibana::g::ChoreographyTerm for hibana::g::Route<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<162, (), hibana::integration::cap::control::LoopBreakKind>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>>>>::SOURCE` failed inside this call
  |
note: inside `hibana::global::program::is_binary_loop_route`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/program.rs
  |
  |             panic!("loop routes must order arms as continue then break")
  |             ------------------------------------------------------------ in this macro invocation

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |         let source = <Steps as crate::g::ChoreographyTerm>::SOURCE.eff_list();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |     &ValidatedProgram::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_typed_program::<0, hibana::g::Route<hibana::g::Send<Role<0>, Role<0>, Msg<162, (), LoopBreakKind>>, hibana::g::Send<Role<0>, Role<0>, Msg<161, (), LoopContinueKind>>>>`
 --> src/global/role_program/program.rs
  |
  |         project_typed_program(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
